Rework SkillContainer with per-source transient/permanent storage